--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@vercel/kv": "^1.0.1",
+		"vercel": "^33.0.2"
+	}
 }
